--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = humanize
 description = Python humanize utilities
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/jmoiron/humanize
+url = https://github.com/python-humanize/humanize
 author = Jason Moiron
 author_email = jmoiron@jmoiron.net
 maintainer = Hugo van Kemenade
@@ -27,11 +27,11 @@ classifiers =
     Topic :: Text Processing :: General
 keywords = humanize time size
 project_urls =
-    Source=https://github.com/jmoiron/humanize
-    Issue tracker=https://github.com/jmoiron/humanize/issues
+    Source=https://github.com/python-humanize/humanize
+    Issue tracker=https://github.com/python-humanize/humanize/issues
     Funding=https://tidelift.com/subscription/pkg/pypi-humanize?utm_source=pypi-humanize&utm_medium=pypi
     Documentation=https://python-humanize.readthedocs.io/
-    Release notes=https://github.com/jmoiron/humanize/releases
+    Release notes=https://github.com/python-humanize/humanize/releases
 
 [options]
 packages = find:
