--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,3 +58,11 @@ jobs:
         with:
           flags: ${{ matrix.codecov-flag }}
           name: ${{ matrix.os }} Python ${{ matrix.python-version }}
+
+  success:
+    needs: test
+    runs-on: ubuntu-latest
+    name: test successful
+    steps:
+      - name: Success
+        run: echo Test successful
