--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,15 +56,21 @@ repos:
         args: ["--convention", "google"]
         files: "src/"
 
-  - repo: https://github.com/tox-dev/tox-ini-fmt
-    rev: 0.5.2
-    hooks:
-      - id: tox-ini-fmt
-
   - repo: https://github.com/asottile/setup-cfg-fmt
     rev: v1.20.1
     hooks:
       - id: setup-cfg-fmt
+        args: [--max-py-version=3.11]
+
+  - repo: https://github.com/tox-dev/pyproject-fmt
+    rev: 0.3.3
+    hooks:
+      - id: pyproject-fmt
+
+  - repo: https://github.com/tox-dev/tox-ini-fmt
+    rev: 0.5.2
+    hooks:
+      - id: tox-ini-fmt
 
 ci:
   autoupdate_schedule: quarterly
