--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,6 +56,13 @@ repos:
         args: ["--convention", "google"]
         files: "src/"
 
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.942
+    hooks:
+      - id: mypy
+        additional_dependencies: [pytest, types-freezegun, types-setuptools]
+        args: [--strict]
+
   - repo: https://github.com/asottile/setup-cfg-fmt
     rev: v1.20.1
     hooks:
