--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist =
-    py{py3, 311, 310, 39, 38, 37}
+    docs
+    lint
+    py{py3, 312, 311, 310, 39, 38, 37}
 
 [testenv]
 passenv =
