--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -65,16 +65,15 @@ repos:
         additional_dependencies: [pytest, types-freezegun, types-setuptools]
         args: [--strict]
 
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v2.2.0
-    hooks:
-      - id: setup-cfg-fmt
-        args: [--max-py-version=3.11, --include-version-classifiers]
-
   - repo: https://github.com/tox-dev/pyproject-fmt
     rev: 0.4.1
     hooks:
       - id: pyproject-fmt
+
+  - repo: https://github.com/abravalheri/validate-pyproject
+    rev: v0.10.1
+    hooks:
+      - id: validate-pyproject
 
   - repo: https://github.com/tox-dev/tox-ini-fmt
     rev: 0.5.2
