Include .mo files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,11 @@ target_version = ["py37"]
 [tool.hatch]
 version.source = "vcs"
 
+[tool.hatch.build]
+include = [
+  "src/humanize/locale/**/*.mo",
+]
+
 [tool.hatch.version.raw-options]
 local_scheme = "no-local-version"
 
