Drop support for EOL Python 3.7

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,15 @@
 [tox]
-envlist =
+requires =
+    tox>=4.2
+env_list =
     docs
     lint
-    py{py3, 312, 311, 310, 39, 38, 37}
+    py{py3, 312, 311, 310, 39, 38}
 
 [testenv]
 extras =
     tests
-passenv =
+pass_env =
     FORCE_COLOR
 commands =
     {envpython} -m pytest --cov humanize --cov tests --cov-report xml {posargs}
@@ -22,7 +24,7 @@ commands =
 skip_install = true
 deps =
     pre-commit
-passenv =
+pass_env =
     PRE_COMMIT_COLOR
 commands =
     pre-commit run --all-files --show-diff-on-failure
