--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: humanize
-site_url: https://python-humanize.readthedocs.io
+site_url: https://humanize.readthedocs.io
 repo_url: https://github.com/python-humanize/humanize
 theme:
   name: material
