--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ requires =
 env_list =
     docs
     lint
-    py{py3, 312, 311, 310, 39, 38}
+    py{py3, 313, 312, 311, 310, 39, 38}
 
 [testenv]
 extras =
@@ -12,7 +12,13 @@ extras =
 pass_env =
     FORCE_COLOR
 commands =
-    {envpython} -m pytest --cov humanize --cov tests --cov-report xml {posargs}
+    {envpython} -m pytest \
+      --cov humanize \
+      --cov tests \
+      --cov-report html \
+      --cov-report term \
+      --cov-report xml \
+      {posargs}
 
 [testenv:docs]
 deps =
