Update Ruff config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,20 +63,23 @@ artifacts = [
 local_scheme = "no-local-version"
 
 [tool.ruff]
-line-length = 88
+fix = true
+
+[tool.ruff.lint]
 select = [
+  "C4", # flake8-comprehensions
   "D", # pydocstyle
   "E", # pycodestyle errors
   "EM", # flake8-errmsg
   "F", # pyflakes errors
   "I", # isort
   "ISC", # flake8-implicit-str-concat
+  "LOG", # flake8-logging
   "PGH", # pygrep-hooks
   "RUF100", # unused noqa (yesqa)
   "UP", # pyupgrade
   "W", # pycodestyle warnings
   "YTT", # flake8-2020
-  # "LOG", # TODO: enable flake8-logging when it's not in preview anymore
 ]
 extend-ignore = [
   "E203", # Whitespace before ':'
@@ -85,9 +88,9 @@ extend-ignore = [
   "E241", # Multiple spaces after ','
 ]
 
-[tool.ruff.isort]
-required-imports = ["from __future__ import annotations"]
+[tool.ruff.lint.isort]
 known-first-party = ["humanize"]
+required-imports = ["from __future__ import annotations"]
 
 [tool.ruff.pydocstyle]
 convention = "google"
