Set COVERAGE_CORE=sysmon for faster test coverage on 3.12+

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,7 +101,9 @@ convention = "google"
 [tool.pytest.ini_options]
 addopts = "--color=yes"
 filterwarnings = [
-    "error",
-    # https://github.com/dateutil/dateutil/issues/1314
-    "ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning:dateutil.tz.tz",
+  "error",
+  # https://github.com/dateutil/dateutil/issues/1314
+  "ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning:dateutil.tz.tz",
+  # Python <= 3.11
+  "ignore:sys.monitoring isn't available, using default core:coverage.exceptions.CoverageWarning",
 ]
