--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,8 @@ extras =
     tests
 pass_env =
     FORCE_COLOR
+set_env =
+    COVERAGE_CORE = sysmon
 commands =
     {envpython} -m pytest \
       --cov humanize \
@@ -22,7 +24,7 @@ commands =
 
 [testenv:docs]
 deps =
-    -rdocs/requirements.txt
+    -r docs/requirements.txt
 commands =
     mkdocs build
 
