--- a/tox.ini
+++ b/tox.ini
@@ -40,12 +40,12 @@ commands =
 
 [testenv:mypy]
 deps =
-    mypy==1.11.2
+    mypy==1.12
     pytest
     types-freezegun
     types-setuptools
 commands =
-    mypy --strict --pretty --show-error-codes . {posargs}
+    mypy . {posargs}
 
 [pytest]
 addopts = --color=yes --doctest-modules
