--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,10 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
+      - name: Generate translation binaries
+        run: |
+          scripts/generate-translation-binaries.sh
+
       - uses: hynek/build-and-inspect-python-package@v2
 
   # Upload to Test PyPI on every commit on main.
