--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,9 +26,12 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
+      - name: Install gettext
+        run: |
+          sudo apt install gettext
+
       - name: Generate translation binaries
         run: |
-          apt-get install gettext
           scripts/generate-translation-binaries.sh
 
       - uses: hynek/build-and-inspect-python-package@v2
