More testing with uv

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,6 +32,6 @@ jobs:
         with:
           python-version: "3.x"
       - name: Install uv
-        uses: hynek/setup-cached-uv@v2
+        uses: astral-sh/setup-uv@v5
       - name: Mypy
         run: uvx --with tox-uv tox -e mypy
