--- a/tox.ini
+++ b/tox.ini
@@ -40,10 +40,7 @@ commands =
 
 [testenv:mypy]
 deps =
-    mypy==1.12
-    pytest
-    types-freezegun
-    types-setuptools
+    -r requirements-mypy.txt
 commands =
     mypy . {posargs}
 
