Ignore sys.monitoring warning for 3.11 and earlier in coverage.py config

--- a/.coveragerc
+++ b/.coveragerc
@@ -5,3 +5,7 @@
 exclude_also =
     # Don't complain if non-runnable code isn't run:
     if TYPE_CHECKING:
+
+[run]
+disable_warnings =
+    no-sysmon
