Replace hardcoded org name

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   update_release_draft:
-    if: github.repository_owner == 'python-humanize'
+    if: github.event.repository.fork == false
     permissions:
       # write permission is required to create a GitHub Release
       contents: write
