--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,13 @@ filterwarnings = [
 ]
 testpaths = [ "tests" ]
 
+[tool.coverage.report]
+# Regexes for lines to exclude from consideration
+exclude_also = [
+  # Don't complain if non-runnable code isn't run:
+  "if __name__ == .__main__.:",
+]
+
 [tool.mypy]
 pretty = true
 strict = true
