Don't ignore UP038, it's been removed from Ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,6 @@ lint.ignore = [
   "E226",   # Missing whitespace around arithmetic operator
   "E241",   # Multiple spaces after ','
   "PIE790", # flake8-pie: unnecessary-placeholder
-  "UP038",  # Makes code slower and more verbose
 ]
 lint.per-file-ignores."tests/*" = [
   "D",
@@ -99,6 +98,7 @@ lint.flake8-pytest-style.parametrize-names-type = "csv"
 lint.isort.known-first-party = [ "humanize" ]
 lint.isort.required-imports = [ "from __future__ import annotations" ]
 lint.pydocstyle.convention = "google"
+lint.future-annotations = true
 
 [tool.pyproject-fmt]
 max_supported_python = "3.15"
